# steam_dilemma

./: .gitignore  Cargo.toml  README.md  Trunk.toml  client-727e7dfd4ac530ad.js  client-727e7dfd4ac530ad_bg.wasm  client-b04e149201fb4a5c.js  index.html  sw.js
.github/workflows/: pages.yml
builder/: Cargo.toml
builder/src/: main.rs
client/: Cargo.toml  index.html
client/src/: app_model.rs  app_ui.rs  consultant.rs  customer.rs  game.rs  lib.rs  main.rs  steam_database.rs
docs/: index.html  steam_dilema.js  steam_dilema_bg.wasm
server/: Cargo.toml
server/src/: main.rs
server/src/steam/: mod.rs  steam_client.rs  steam_user_library.rs
src/: app.rs  lib.rs  main.rs
